applied new favicons, cv file. fixed mobile overlapping on preview

--- a/src/main.scss
+++ b/src/main.scss
@@ -529,7 +529,8 @@ footer {
         width: auto;
         max-width: 100%;
         height: auto;
-        max-height: 675px;
+        /* max-height: 675px; */
+        max-height: 70vh;
         box-shadow: $boxShadow;
       }
 
